--- a/css/index.css
+++ b/css/index.css
@@ -1,20 +1,22 @@
 body {
     background: #ffffff;
-    color: white;
+    color: black;
     font-family: 'MicrosoftYaHei';
+}
+
+ul {
+    list-style-type:none;
 }
 
 .flat-form {
     background: #a5a5a5;
-    margin: 25px auto;
-    width: 405px;
-    height: 350px;
+    margin: 20px auto;
+    width: 400px;
+    height: 300px;
     position: relative;
-    font-family: 'MicrosoftYaHei';
 }
 
 .tabs {
-    background: #c0392b;
     height: 40px;
     margin: 0;
     padding: 0;
@@ -22,7 +24,7 @@ body {
     width: 100%;
     position: relative;
     display: block;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
 .tabs li {
@@ -33,7 +35,7 @@ body {
 }
 
 .tabs a {
-    background: #c0392b;
+    background: #919191;
     display: block;
     float: left;
     text-decoration: none;
@@ -43,16 +45,8 @@ body {
     /*border-right: 1px solid @tab-border;*/
 }
 
-.tabs li:last-child a {
-    border-right: none;
-    width: 202px;
-    padding-left: 0;
-    padding-right: 0;
-    text-align: center;
-}
-
 .tabs a.active {
-    background: #e74c3c;
+    background: #8B7D7B;
     border-right: none;
     -webkit-transition: all 0.5s linear;
     -moz-transition: all 0.5s linear;
@@ -76,7 +70,7 @@ body {
 }
 
 form {
-    padding-right: 20px !important;
+    padding-right: 30px !important;
 }
 
 form input[type=text],
@@ -88,12 +82,12 @@ form input[type=submit] {
 form input[type=text],
 form input[type=password] {
     width: 100%;
-    height: 40px;
+    height: 30px;
     margin-bottom: 10px;
-    padding-left: 15px;
+    padding: 4px;
     background: #fff;
+    color: #000;
     border: none;
-    color: #e74c3c;
     outline: none;
 }
 
@@ -140,12 +134,12 @@ form input[type=password] {
 }
 
 .button:hover {
-    background: #1e75aa;
+    background: #528B8B;
     /*box-shadow: 0 3px 1px #237bb2;*/
 }
 
 .button:active {
-    background: #136899;
+    background: #4A708B;
     /*box-shadow: 0 3px 1px #0f608c;*/
 }
 
